# jwtcli

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  usecases.txt
.github/workflows/: ci.yaml  tests.yaml
scripts/: clean-bats.sh  make-keys.sh  make_ed25519_keys.py  make_ed448_keys.py  setup-pre-commit.sh  setup-requirements.sh
src/jwtcli/: cli.py
tests/: test_encode.py
tests/bats/: build.py  usecases.j2  usecases.yaml
tests/bats/keys/: ed25519-private.key  ed25519-public.crt  ed448-private.key  ed448-public.crt  es256-private.key  es256-public.crt  es256.pem  es256k-private.key  es256k-public.crt  es256k.pem  es384-private.key  es384-public.crt  es384.pem  es512-private.key  es512-public.crt  es512.pem  ps256-public.crt  ps256.pem  ps384-public.crt  ps384.pem  ps512-public.crt  ps512.pem  rsa-keypair-public.crt  rsa-private.key  testkey_rsa.priv
